--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,52 +1,49 @@
-name: Realme X7 Max Kernel Builder  
-on:  
-  workflow_dispatch:  
-  push:  
-    branches: [master]  
+name: Realme X7 Max Kernel Builder
+on:
+  workflow_dispatch:
+  push:
+    branches: [master]
 
-jobs:  
-  build:  
-    runs-on: ubuntu-latest  
-    steps:  
-      # ========================  
-      # 1. Clone & Fix Makefile  
-      # ========================  
-      - name: Clone and Repair Source  
-        run: |  
-          git clone --depth=1 \  
-            "https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source" \  
-            kernel  
-          cd kernel  
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      # ========================
+      # 1. Fixed Clone Command
+      # ========================
+      - name: Clone Source
+        run: |
+          git clone --depth=1 "https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source" kernel
 
-          # Delete OPLUS components  
-          rm -rf \  
-            arch/arm64/kernel/rootguard \  
-            kernel/sched_assist \  
-            drivers/input/touchscreen/oplus_touchscreen \  
-            OplusKernelEnvConfig.mk  
+      # ========================
+      # 2. Sanitize OPLUS Components
+      # ========================
+      - name: Remove OPLUS Dependencies
+        run: |
+          cd kernel
+          rm -rf \
+            arch/arm64/kernel/rootguard \
+            kernel/sched_assist \
+            drivers/input/touchscreen/oplus_touchscreen \
+            OplusKernelEnvConfig.mk
+          sed -i '/OPLUS_/d; /_FEATURE_/d' Makefile
 
-          # Fix Makefile conditionals (critical for missing 'endif')  
-          sed -i -e '/^if.*OPLUS_/,/^endif/d' \  
-                 -e '/^if.*_FEATURE_/,/^endif/d' \  
-                 -e '/include.*OplusKernelEnvConfig.mk/d' \  
-              Makefile  
+      # ========================
+      # 3. Build Minimal Kernel
+      # ========================
+      - name: Build Kernel
+        run: |
+          cd kernel
+          export ARCH=arm64
+          echo "CONFIG_ARM64=y" > arch/arm64/configs/generic_defconfig
+          make O=build -j$(nproc) generic_defconfig
+          make O=build -j$(nproc)
 
-      # ========================  
-      # 2. Build Vanilla Kernel  
-      # ========================  
-      - name: Build Kernel  
-        run: |  
-          cd kernel  
-          export ARCH=arm64  
-          echo "CONFIG_ARM64=y" > arch/arm64/configs/generic_defconfig  
-          make O=build generic_defconfig  
-          make O=build -j$(nproc)  
-
-      # ========================  
-      # 3. Upload Artifact  
-      # ========================  
-      - name: Upload Artifact  
-        uses: actions/upload-artifact@v4  
-        with:  
-          name: kernel-build  
-          path: kernel/build/arch/arm64/boot/Image*  
+      # ========================
+      # 4. Upload Artifact
+      # ========================
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: kernel-build
+          path: kernel/build/arch/arm64/boot/Image*
