--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,33 @@
-name: 3-Rule Kernel Builder  
-on: [workflow_dispatch]  
+name: Realme X7 Max Kernel Builder
+on:
+  workflow_dispatch:
+  push:
+    branches: [main]
 
-jobs:  
-  build:  
-    runs-on: ubuntu-latest  
-    steps:  
-      # ==== RULE 1: FULL CODE ====  
-      - name: Clone Entire Source  
-        run: |  
-          git clone --depth=1 \  
-            "https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source" \  
-            kernel  
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone Kernel Source
+        run: |
+          git clone --depth=1 \
+            "https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source" \
+            kernel-source
 
-      # ==== RULE 2: ERROR BLOCKING ====  
-      - name: Past Error Guard  
-        run: |  
-          cd kernel  
-          # Fail build if these ever reappear  
-          [ ! -d "kernel/sched_assist" ] || { echo "RULE 2 VIOLATED: sched_assist"; exit 1; }  
-          [ ! -f "arch/arm64/kernel/rootguard/Makefile" ] || { echo "RULE 2 VIOLATED: rootguard"; exit 1; }  
+          # Verify clone success
+          if [ ! -d "kernel-source" ]; then
+            echo "::error::Clone failed! Check repository URL."
+            exit 1
+          fi
 
-      # ==== RULE 3: DOCUMENT EVERYTHING ====  
-      - name: Build & Log  
-        run: |  
-          cd kernel  
-          make defconfig 2>&1 | tee build.log  
-          make -j$(nproc) 2>&1 | tee -a build.log  
+      - name: Build Kernel
+        run: |
+          cd kernel-source
+          make defconfig
+          make -j$(nproc)
 
-      - name: Archive Outputs  
-        uses: actions/upload-artifact@v4  
-        with:  
-          name: kernel-build  
-          path: |  
-            kernel/arch/arm64/boot/Image  
-            kernel/build.log  
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: kernel-build
+          path: kernel-source/arch/arm64/boot/Image
