--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,40 @@
-name: Realme X7 Max Auto-Builder
+name: Realme X7 Max Stable Builder
 on: [push, workflow_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Clone & Sanitize
+      - name: Clone Sources
         run: |
+          # Your Realme device tree
           git clone --depth=1 \
             "https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source" \
-            kernel-source
+            realme-kernel
 
-          # Remove problematic components
-          cd kernel-source
-          rm -rf kernel/sched_assist kernel/locking/klockopt
-          sed -i '/sched_assist/d; /klockopt/d' init/Kconfig
+          # OnePlus kernel base
+          git clone --depth=1 \
+            "https://github.com/mt6893-development/android_kernel_oplus_mt6893" \
+            oneplus-kernel
 
-      - name: Build Kernel
+      - name: Merge Critical Code
         run: |
-          cd kernel-source
-          make realme_x7max_defconfig
-          make -j$(nproc)
+          # Bring Realme components into OnePlus base
+          cp -r realme-kernel/arch/arm64/boot/dts/realme oneplus-kernel/arch/arm64/boot/dts/
+          cp realme-kernel/drivers/input/touchscreen/realme_ts.c oneplus-kernel/drivers/input/touchscreen/
 
-      - name: Upload Artifact
+          # Remove problematic OnePlus code
+          rm -rf oneplus-kernel/block/uxio_first
+          sed -i '/uxio_first/d' oneplus-kernel/block/Kconfig
+
+      - name: Build
+        run: |
+          cd oneplus-kernel
+          make ARCH=arm64 realme_x7max_defconfig
+          make -j$(nproc) ARCH=arm64
+
+      - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: kernel-${{ github.sha }}
-          path: kernel-source/arch/arm64/boot/Image
+          name: realme-op-merged
+          path: oneplus-kernel/arch/arm64/boot/Image
