--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,10 @@ jobs:
         run: |
           git clone --depth=1 https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source kernel
 
-      - name: 🛠 Set Up Toolchain (Alternative Clang)
+      - name: 🛠 Set Up Toolchain (AOSP Clang)
         run: |
-          wget https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+/refs/heads/master/clang-r450784d.tar.gz
-          tar -xvf clang-r450784d.tar.gz
-          export PATH=$PWD/clang-r450784d/bin:$PATH
+          git clone --depth=1 https://gitlab.com/varunhardgamer/azure-clang.git clang
+          export PATH=$PWD/clang/bin:$PATH
           export CROSS_COMPILE=aarch64-linux-gnu-
           export ARCH=arm64
 
