--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
         run: |
           git clone --depth=1 https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source kernel
 
-      - name: 🛠 Set Up Toolchain (AOSP Clang)
+      - name: 🛠 Set Up Toolchain (Proton Clang)
         run: |
-          git clone --depth=1 https://gitlab.com/varunhardgamer/azure-clang.git clang
+          git clone --depth=1 https://github.com/kdrag0n/proton-clang.git clang
           export PATH=$PWD/clang/bin:$PATH
           export CROSS_COMPILE=aarch64-linux-gnu-
           export ARCH=arm64
